[log][1.0]Install winston
